# visionmagic

./: .gitattributes  Cargo.toml  README.md
docs/: 0.bootstrap.js  bootstrap.js  index.html  repair.html  segmentation.html  simplification.html
docs/assets/: style.css
visionmagic/: Cargo.toml
visionmagic/src/: aggregation.rs  cluster_stat.rs  clustering.rs  hole_filling.rs  lib.rs  pipeline.rs  segmentation.rs  simplification.rs
visionmagic/src/fmm/: bitmask.rs  macros.rs  min_float.rs  mod.rs  painter.rs  smoother.rs
webapp/: Cargo.toml  README.md  app
webapp/app/: index.js  package-lock.json  package.json  repair.html  segmentation.html  simplification.html
webapp/app/assets/: style.css
webapp/app/lib/: impression.js  repair.js  segmentation.js  simplification.js
webapp/src/: canvas.rs  lib.rs  repair.rs  segmentation.rs  simplification.rs  svg.rs
