[package]
name = "visionmagic-webapp"
version = "0.1.0"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "Vision Magic demo"
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/"
repository = "https://github.com/visioncortex/visionmagic/"
categories = ["graphics", "computer-vision"]
keywords = ["computer-graphics", "computer-vision"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
visionmagic = { path = "../visionmagic" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "ImageData",
  "Path2d",
  "Window",
]
